# rosprolog

./: CMakeLists.txt  package.xml
cmake/: FindSWIPL.cmake
examples/: test_rosprolog.cpp
include/private/: json_ros_priv.h  rosprolog_kb_priv.h
include/rosprolog/rosprolog_client/: PrologBindings.h  PrologClient.h
include/rosprolog/rosprolog_kb/: json_ros.h  rosprolog_kb.h
include/rosprolog/rosprolog_node/: PrologEngine.h  PrologNode.h
launch/: rosprolog.launch
scripts/: rosprolog_commandline.py
src/: json_ros.py
src/rosprolog_client/: PrologBindings.cpp  PrologClient.cpp  PrologQuery.cpp  rosprolog_client.py
src/rosprolog_kb/: json_ros.cpp  ros_param.cpp  ros_terms.cpp  rosprolog_kb.cpp  tf.cpp
src/rosprolog_node/: PrologEngine.cpp  PrologNode.cpp  PrologPool.cpp
